# 7_term_mipt_maxim_m_v

./: README.md
logger_timer/: CMakeLists.txt  main.cpp  new_timer_impl.cpp  new_timer_impl.h  timer.h
logger_timer/test/: CMakeLists.txt  generator.cpp
logger_timer/test/generated_test/: CMakeLists.txt  main.cpp
