cmake_minimum_required(VERSION 3.0.0)
project(LOGGER_TIMER)
add_library(NEW_TIMER_IMPL new_timer_impl.h new_timer_impl.cpp)
#add_library(TIMER timer.h timer.cpp)
add_executable(LOGGER_TIMER main.cpp)
target_link_libraries(LOGGER_TIMER LINK_PUBLIC NEW_TIMER_IMPL)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
option(use_timer "")
IF(use_timer)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DUSE")
ENDIF()
set (CMAKE_CXX_STANDARD 11)
