cmake_minimum_required(VERSION 3.0.0)
project(GENERATED_TESTS)
file(GLOB test_SRC "*.cpp" "*.h")
option(use_timer "")
IF(use_timer)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DUSE")
ENDIF()
add_executable(GENERATED_TESTS ${test_SRC} "../../new_timer_impl.h" "../../new_timer_impl.cpp")
set (CMAKE_CXX_STANDARD 11)
